--- a/estilo.css
+++ b/estilo.css
@@ -126,3 +126,10 @@ body {
     border: 2px solid #000;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
+#carlo3 {
+    width: 400px;
+    height: auto;
+    border-radius: 15px;
+    border: 2px solid #000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
